Fix style to make scrollbar disappear

--- a/assets/stylesheets/threads.scss
+++ b/assets/stylesheets/threads.scss
@@ -2,7 +2,7 @@
   float: left;
   width: 100%;
   height: 100%;
-  margin-left: 0.23em;
+  padding-left: 0.23em;
 }
 
 
